--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <!--
-     Optionally, register AnalyticsReceiver and AnalyticsService to support background
+     Optionally, register AnalyticsReceiver and AnalyticsService to support background_image
      dispatching on non-Google Play devices
         -->
         <receiver
