--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "thomasave.mastermind"
         minSdkVersion 14
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
     }
     buildTypes {
         release {
@@ -28,8 +28,11 @@ android {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.2.0'
-    compile 'com.google.android.gms:play-services-analytics:9.2.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile ('com.google.android.gms:play-services-analytics:8.4.0') {
+        exclude group: 'com.google.firebase', module: 'firebase-common'
+    }
+    compile('com.google.android.gms:play-services-ads:8.4.0') {
+        exclude group: 'com.google.firebase', module: 'firebase-common'
+    }
 }
