--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
-
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "thomasave.mastermind"
         minSdkVersion 14
-        targetSdkVersion 24
-        versionCode 2
-        versionName "2.0"
+        targetSdkVersion 26
+        versionCode 3
+        versionName "2.1"
     }
     buildTypes {
         release {
@@ -28,11 +26,5 @@ android {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile ('com.google.android.gms:play-services-analytics:8.4.0') {
-        exclude group: 'com.google.firebase', module: 'firebase-common'
-    }
-    compile('com.google.android.gms:play-services-ads:8.4.0') {
-        exclude group: 'com.google.firebase', module: 'firebase-common'
-    }
+    compile 'com.android.support:appcompat-v7:26.1.0'
 }
