--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "thomasave.mastermind"
         minSdkVersion 14
-        targetSdkVersion 26
-        versionCode 3
-        versionName "2.1"
+        targetSdkVersion 28
+        versionCode 5
+        versionName "2.3"
     }
     buildTypes {
         release {
             release {
                 minifyEnabled true
-                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
             debug {
                 minifyEnabled true
-                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             }
         }
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:appcompat-v7:28.0.0'
 }
