--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
-
+    compileSdk 31
+    namespace 'thomasave.mastermind'
     defaultConfig {
         applicationId "thomasave.mastermind"
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 34
         versionCode 5
         versionName "2.3"
     }
@@ -24,5 +23,5 @@ android {
 }
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
 }
